@@ -24,7 +24,7 @@
  * @package Gallery
  */
 
-$gallery->version = '1.6-RC1-svn-b138';
+$gallery->version = '1.6-RC1-svn-b139';
 $gallery->config_version = 102;
 $gallery->album_version = 41;
 $gallery->user_version = 6;
