@@ -12,7 +12,7 @@
 
 global $gallery, $adminbox;
 
-$checklist = array('commands', 'text');
+$checklist = array('header', 'commands', 'text');
 foreach ($checklist as $check) {
 	if (!isset($adminbox[$check])) {
 		$adminbox[$check] = '';
@@ -24,10 +24,13 @@ foreach ($checklist as $check) {
 
 <div class="g-adminbar">
   <table width="100%">
+  <tr>
+      <td colspan="2" class="g-adminbarheader right"><?php echo $adminbox['header'] ?></td>
+    </tr>
     <tr>
       <td class="g-adminbartext left"><?php echo $adminbox['text'] ?></td>
       <td class="g-adminbarcommands right">
-      		<?php echo $adminbox['commands'] ?>
+      		<?php echo $adminbox['commands']; ?>
       </td>
     </tr>
   </table>
